--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "parcel",
     "build": "parcel build",
-    "build-gh": "parcel build --public-url 'https://{AizazHaider110}.github.io/{MLSA-Portfolio}'",
+    "build-gh": "parcel build --public-url 'https://AizazHaider110.github.io/MLSA-Portfolio'",
     "predeploy": "npm run build-gh",
     "deploy": "gh-pages -d dist"
   },
